kubernetes/apps/media/tdarr/app/deployment.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/apps/deployment_v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tdarr
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      securityContext:
        runAsNonRoot: false
        runAsUser: 0
        runAsGroup: 0
        fsGroup: 568
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: app
          image: ghcr.io/haveagitgat/tdarr:2.96.01@sha256:83c4c956c85ffbf3c82f479ee2fe355b52ece32e732d8b00075afb447087a3ae
          ports:
            - name: http
              containerPort: 8265
            - name: server
              containerPort: 8266
          startupProbe:
            httpGet:
              path: /
              port: 8265
            failureThreshold: 60
            periodSeconds: 10
          livenessProbe: &probe
            httpGet:
              path: /
              port: 8265
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 10
            failureThreshold: 5
          readinessProbe: *probe
          resources:
            requests:
              cpu: 250m
              memory: 2Gi
            limits:
              cpu: 2000m
              memory: 4Gi
              gpu.intel.com/i915: "1"
          securityContext:
            privileged: true
          volumeMounts:
            - name: config
              mountPath: /app/server
            - name: media
              mountPath: /media
            - name: temp
              mountPath: /temp
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: tdarr
        - name: media
          persistentVolumeClaim:
            claimName: synology-media
        - name: temp
          emptyDir: {}
