kubernetes/apps/media/tdarr/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tdarr
spec:
  ports:
    - name: http
      port: 8265
      targetPort: http
      protocol: TCP
    - name: server
      port: 8266
      targetPort: server
      protocol: TCP
