kubernetes/apps/media/tdarr/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tdarr
  annotations:
    gatus.home-operations.com/endpoint: |-
      group: internal
      dns:
        query-name: tdarr.unscfleet.com
        query-type: A
      url: 1.1.1.1
      conditions:
        - len([BODY]) == 0
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - tdarr.unscfleet.com
  rules:
    - backendRefs:
        - name: tdarr
          port: 8265
